--- a/src/styles/pages/_wage-determination.scss
+++ b/src/styles/pages/_wage-determination.scss
@@ -3,15 +3,6 @@
     margin-top: 50px !important;
   }
   
-  textarea{
-    width: 100%;
-    max-width: 100%;
-    height: 700px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    font-family: 'Courier New', Courier, monospace;
-  }
-  
   .usa-unstyled-list li{
     margin-bottom: 5px;
   }
@@ -19,6 +10,17 @@
   .print-link{
     cursor: pointer;
   }
+  
+  pre{
+    background-color: #fff;
+    border-radius: .25rem;
+    box-shadow: 0 1px 0 rgba(0,0,0,.25);
+    padding: 3rem 3rem 1rem;
+    margin: 0 auto 2rem;
+    border: 1px solid #E8E8E8;
+    font-size: 1.4rem;
+  }
+  
   /* MISC */
   /*============================*/
   samsidenav{
