Change awards api call from POST to GET and added date information

--- a/src/app/awards/awards.page.html
+++ b/src/app/awards/awards.page.html
@@ -139,10 +139,10 @@
 				</table>
 				Initiative: {{awardData.documentInformation.initiative}}<br />
 				<h3 id="dates">Dates</h3>
-				Date Signed: {{dateSigned}}<br />
-				Effective Date: {{effectiveDate}}<br />
-				Completion Date: {{completionDate}}<br />
-				Estimated Ultimate Completion Date: {{estimatedUltimateCompletionDate}}
+				Date Signed: {{awardData.dateInformation.dateSigned}}<br />
+				Effective Date: {{awardData.dateInformation.dateEffective}}<br />
+				Completion Date: {{awardData.dateInformation.dateCompletion}}<br />
+				Estimated Ultimate Completion Date: {{awardData.dateInformation.dateUltimateCompletion}}
 				<h3 id="amounts">Amounts</h3>
 				<table>
 					<tr>
