updates to NonStandard Services front end logic

--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -129,7 +129,7 @@
                 </samRadioButton>
 
                 <!--Non-Standard Services drop down select-->
-                <samSelect *ngIf="wdNonStandardRadModel === 'yesNSS'"
+                <samSelect
                   [(model)]="wdNonStandardSelectModel"
                   [name]="wdNonStandardSelectConfig.name"
                   [options]="wdNonStandardSelectConfig.options"
