--- a/src/app/Reports/sections/overview/scheduled/scheduled.template.html
+++ b/src/app/Reports/sections/overview/scheduled/scheduled.template.html
@@ -1,10 +1,10 @@
 <section>
-<br><br><br>
-Back to: <a routerLink="/reports" routerLinkActive="Active">Dynamic Reports</a>
-<h2 class="m_T-2x">Scheduled Reports</h2> 
-<div class="usa-grid-full">
-	<div class="centered">
-		<iframe name="viewport" [src]="url" class="no-frame" height="800" width="1024"></iframe>
-	</div>
-</div>
-<section class="usa-grid-full">
+  <br><br><br>
+  <p>Back to: <a routerLink="/reports" routerLinkActive="Active">Dynamic Reports</a></p>
+  <h2 class="m_T-2x">Scheduled Reports</h2>
+  <div class="usa-grid-full">
+	  <div class="centered">
+		  <iframe name="viewport" [src]="url" class="no-frame" height="800" width="1024"></iframe>
+	  </div>
+  </div>
+</section>
