--- a/src/app/Reports/sections/static/static.template.html
+++ b/src/app/Reports/sections/static/static.template.html
@@ -21,7 +21,7 @@
                     <li *ngFor="let item of data.reports;let i=index">
                         <div class="grid">
                             <div class="grid-name"><b><a href="{{item.loc}}" target="_blank">{{item.name}}</a></b></div>
-                            <div class="grid-date"><span style="position: absolute; right: 0"><i>last run on {{item.date}}</i></span></div>
+                            <div class="grid-date"><span class="grid-date1"><i>last run on {{item.date}}</i></span></div>
 
                         <br>
                         <div class="grid-desc">{{item.desc}}</div>
