updates for new list input component

--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -507,3 +507,15 @@
     </sam-filters-container>
   </div>
 </div>
+<div class="usa-grid">
+  <h2 class="usa-width-one">Sam List Input</h2>
+  <div class="usa-width-one-fourth">
+    <pre>{{listOptions | json}}</pre>
+  </div>
+  <div class="usa-width-one-fourth">
+      <sam-list-input [control]="listControl" [options]="listOptions"></sam-list-input>
+  </div>
+  <div class="usa-width-one-fourth">
+      <sam-list-input [control]="listControl" [selections]="[1,4]" [options]="listOptions"></sam-list-input>
+  </div>
+</div>
