--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -22,6 +22,7 @@
 @import 'components/alert';
 @import 'components/authentication';
 @import 'components/collapsible';
+@import 'components/list-input';
 @import 'components/footer';
 @import 'components/button';
 @import 'components/pagination';
