--- a/src/styles/components/_autocomplete.scss
+++ b/src/styles/components/_autocomplete.scss
@@ -16,6 +16,7 @@
     margin: 0.2em 0;
     border: 1px solid $color-black;
     position: relative;
+    background: $color-white;
 
     div {
       position: relative;
