--- a/src/app/app-components/object-form/form-field/form-field.template.html
+++ b/src/app/app-components/object-form/form-field/form-field.template.html
@@ -14,11 +14,13 @@
            [label] = "field.label"
            [name] = "field.name + '-input'"
            [maxlength] = "field.maxlength"
+           [minlength] = "field.minlength"
            [hint] = "field.hint"
            [required] = "field.required"
            [control] = "control"
            [value] = "value"
            [formControlName] = "field.name"
+           [errorMessage] = "((control.valid == false) && (control.dirty || control.touched)) ? field.errorMessage : ''"
 ></samNumber>
 
 <samTextArea *ngIf="field.type == 'samTextArea'"
